# daily-opportunity-os

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  SPEC.md  STATE.md  TASKS.md  dashboard.py  pyproject.toml
.claude/: settings.json
.planning/: PARALLEL_SYSTEMS_SPEC.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SKILLS_MAP.md  STATE.md  config.json
.streamlit/: config.toml
config/: buckets.yaml  categories.yaml  portfolio_lanes.yaml  regions.yaml  scoring_weights.yaml  source_registry.yaml  tam_methods.yaml  thesis.yaml  venezuela_wedge_map.yaml  weekly_quotas.yaml
data/: automation_runs.jsonl  interviews.jsonl  machine_metrics.jsonl  outcome_tracking.jsonl  pain_library.jsonl  people_pipeline.jsonl  pipeline_failures.jsonl  session_state.json  weekly_quotas.yaml
docs/: api-research-2026-04.md  scoring-criteria.md
hooks/: append_score_history.py  auto_rescore.py  auto_save_session.py  check_interview_quota.py  dedupe_opportunities.py  ensure_venezuela_section.py  export_notion_files.py  inject_market_context.py  preload_geo_context.py  save_session_state.py  skill_router.py  track_machine_metrics.py  validate_required_fields.py
memory/: BIT2ME_ARCHITECTURE_SUMMARY.md  CHATS_LARK_FULL.md  COWORK_SESSION_INDEX.md  DESKTOP_FILES_EXTRACTION.md  DESKTOP_FOLDERS_EXTRACTION.md  DOWNLOADS_COUNCIL_ACTIVATION.md  DOWNLOADS_CRITICAL_DOCS.md  EXECUTIVE_SUMMARY.md  EXTRACTION_COMPLETE.txt  EXTRACTION_CONFIRMATION_2026-02-24.txt  GEMINI_LC_BRIEFS_FULL.txt  GEMINI_LC_BRIEFS_SUMMARY.md  GEMINI_PART1_TRANSCRIPTS.txt  GEMINI_TRANSCRIPTS_FULL.txt  (+9 more)
(+513 files in other folders)
