[project]
name = "opportunity-os"
version = "0.1.0"
description = "Daily business opportunity scouting OS — LATAM and Venezuela focus"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "rich>=13.0",
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]

[project.scripts]
opp-os = "opportunity_os.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
